k8s/namespace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fintrack
  labels:
    app: fintrack
